--- a/LithiumPagalan1stQtrProj_v1/htdocs/homeedit.css
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/homeedit.css
@@ -45,7 +45,7 @@
 }
 #nav{
 	position: fixed;
-	bottom: 20px;
+	bottom: 40px;
 }
 ul{
 	list-style-type: none;
@@ -57,4 +57,13 @@ a{
 }
 body{
 	background-color:#ffeada;
+}
+#botnav{
+  background-color: #E57373;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
 }
