--- a/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.css
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.css
@@ -2,7 +2,7 @@
 	list-style-type: none;
 	font-family: Cursive;
 }
-#head{
+header{
 	line-height: 0px;
 	background-color:#E57373;
 	padding: 15px;
@@ -45,7 +45,7 @@
 }
 #nav{
 	position: fixed;
-	bottom: 20px;
+	bottom: 40px;
 }
 ul{
 	list-style-type: none;
@@ -57,4 +57,13 @@ a{
 }
 body{
 	background-color:#ffeada;
+}
+#botnav{
+  background-color: #E57373;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
 }
